# GeoPython-Assistant-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  pyproject.toml
docs/: diagnostics_spec.md
references/: README.md
scripts/: bootstrap_structure.py  bootstrap_structure.sh  run_dev.ps1  run_dev.sh
src/geopyassistant/diagnostics/: diagnostics_init.py  schema.py  vector_profiler.py
tests/: conftest.py
tests/unit/: test_schema.py  test_vector_profiler.py
