[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geopyassistant"
version = "0.2.0"
description = "Retrieval-Augmented Generation aplicada ao diagnóstico de arquivos geoespaciais e geração de código Python."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pedro Luiz R. Vaz de Melo", email = "pedroluizskt@users.noreply.github.com" }
]
keywords = [
    "geospatial",
    "rag",
    "llm",
    "geopandas",
    "rasterio",
    "remote-sensing",
    "gis",
    "forestry",
    "streamlit",
    "langchain"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    # Aplicação
    "streamlit>=1.36,<2.0",
    "streamlit-folium>=0.20",

    # Geoespacial vetorial
    "geopandas>=0.14,<1.1",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",

    # Geoespacial matricial
    "rasterio>=1.3,<2.0",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "numpy>=1.26,<2.2",

    # Visualização
    "folium>=0.17",
    "matplotlib>=3.8",

    # LLM e RAG
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-groq>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",

    # Loaders auxiliares para indexar documentação
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "markdown>=3.6",

    # Configuração e validação
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "types-requests"
]

[project.urls]
Homepage = "https://github.com/PedroLuizskt/GeoPython-Assistant-v2"
Repository = "https://github.com/PedroLuizskt/GeoPython-Assistant-v2"
Issues = "https://github.com/PedroLuizskt/GeoPython-Assistant-v2/issues"

[project.scripts]
geopyassistant-build-docs = "geopyassistant.cli:build_docs_index"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geopyassistant = ["py.typed"]

# -----------------------------
# Qualidade de código
# -----------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: testes que tocam Chroma/embeddings reais",
    "slow: testes que demoram mais de 5 segundos"
]
